sfdx-source/force-app/main/default/objects/Mx_Intel__x/Mx_Intel__x.object-meta.xml
<CustomObject>
    <description>LEM-13543: It It store unique data specific to Mx.</description>
    <externalDataSource>Figment_Data_Connector</externalDataSource>
    <externalName>public$mx_insights</externalName>
    <label>Mx Intel</label>
    <pluralLabel>Mx Intels</pluralLabel>
</CustomObject>