sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Date_Mx_Joined_Grubhub__c.field-meta.xml
<CustomField>
    <fullName>Date_Mx_Joined_Grubhub__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the date Mx joined Grubhub.</description>
    <externalDeveloperName>gh_date_joined</externalDeveloperName>
    <label>Date Mx Joined Grubhub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>