sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Date_Mx_Joined_Uber_Eats_Postmates__c.field-meta.xml
<CustomField>
    <fullName>Date_Mx_Joined_Uber_Eats_Postmates__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the date Mx joined Uber Eats / Postmates.</description>
    <externalDeveloperName>ue_pm_date_joined</externalDeveloperName>
    <label>Date Mx Joined Uber Eats / Postmates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>