sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Mx_Database_Id__c.field-meta.xml
<CustomField>
    <fullName>Mx_Database_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the Mx database id.</description>
    <externalDeveloperName>mx_db_id</externalDeveloperName>
    <label>Mx Database Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>