sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Number_of_Dashers_in_Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dashers_in_Starting_Point__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores number of dashers in starting point.</description>
    <externalDeveloperName>num_dx</externalDeveloperName>
    <label># of Dashers in Starting Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>