sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Prior_Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Churn_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the prior churn date.</description>
    <externalDeveloperName>prior_churn_date</externalDeveloperName>
    <label>Prior Churn Date</label>
    <type>Date</type>
</CustomField>