sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Sales_Intel_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Sales_Intel_Dashboard__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores Sales Intel Dashboard link.</description>
    <label>Sales Intel Dashboard</label>
    <type>Url</type>
</CustomField>