sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Second_Phone_to_Try__c.field-meta.xml
<CustomField>
    <fullName>Second_Phone_to_Try__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the alternate phone.</description>
    <externalDeveloperName>alt_phone</externalDeveloperName>
    <label>2nd Phone to Try?</label>
    <type>Phone</type>
</CustomField>