sfdx-source/force-app/main/default/objects/Mx_Intel__x/fields/Users_in_3_Mile_Radius__c.field-meta.xml
<CustomField>
    <fullName>Users_in_3_Mile_Radius__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores how many users are there in 3 Mile radius.</description>
    <externalDeveloperName>users_3mile</externalDeveloperName>
    <label>Users in 3 Mile Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>